Attempted to fix mobile background not covering issue

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,10 +3,10 @@ html {
   background-color: rgba(0, 0, 0, 0.7);
   background-image: url(../assets/cover-large.jpg);
   background-blend-mode: overlay;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  -webkit-background-size: cover !important;
+  -moz-background-size: cover !important;
+  -o-background-size: cover !important;
+  background-size: cover !important;
 }
 
 body {
